[package]
name = "cch23-brianheckel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.0", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["clock"] }
color-eyre = "0.6.2"
emojis = "0.6.1"
fancy-regex = "0.12.0"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
shuttle-axum = { version = "0.35.0", default-features = false, features = [
  "axum-0-7",
] }
shuttle-runtime = { version = "0.35.0", default-features = false }
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
tera = "1.19.1"
tokio = "1.28.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
tracing-tree = "0.3.0"
ulid = { version = "1.1.0", features = ["serde", "uuid"] }
uuid = "1.6.1"
